--- a/EquipmentWeb/app/index.html
+++ b/EquipmentWeb/app/index.html
@@ -5,9 +5,48 @@
     <title>Equipment Professional</title>
 
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script data-main="main" src="bower_components/requirejs/require.js"></script>
 </head>
-<body>
-
+<body layout="row">
+    <md-sidenav layout="column"
+                class="md-sidenav-left md-whiteframe-z2"
+                md-component-id="left"
+                md-is-locked-open="$mdMedia('gt-md')">
+        <md-toolbar class="md-tall md-hue-2">
+            <span flex></span>
+            <div layout="column" class="md-toolbar-tools-bottom inset">
+                <i class="material-icons">person</i>
+                <span></span>
+                <div>Firstname Lastname</div>
+                <div>email@domain.com</div>
+            </div>
+        </md-toolbar>
+        <md-list>
+            <md-list-item>
+                <a>
+                    <md-content md-ink-ripple layout="row" layout-align="start center">
+                        <div class="inset">
+                            <i class="material-icons">home</i>
+                        </div>
+                        <div class="inset">Home</div>
+                    </md-content>
+                </a>
+            </md-list-item>
+            <md-list-item>
+                <a>
+                    <md-content md-ink-ripple layout="row" layout-align="start center">
+                        <div class="inset">
+                            <i class="material-icons">list</i>
+                        </div>
+                        <div class="inset">List</div>
+                    </md-content>
+                </a>
+            </md-list-item>
+        </md-list>
+    </md-sidenav>
+    <div layout="column" class="relative" layout-fill role="main">
+        <ui-view></ui-view>
+    </div>
 </body>
 </html>
