Got the equipment item list page to pull the data from the actual back-end service.

--- a/EquipmentWeb/app/index.html
+++ b/EquipmentWeb/app/index.html
@@ -38,7 +38,7 @@
                     <md-content layout-padding>
                         <md-list>
                             <md-list-item flex>
-                                <a ng-click="null">
+                                <a ui-sref="base.home">
                                     <div md-ink-ripple layout="row">
                                         <div class="inset">
                                             <i class="material-icons">home</i>
@@ -48,7 +48,7 @@
                                 </a>
                             </md-list-item>
                             <md-list-item flex>
-                                <a ng-click="null">
+                                <a ui-sref="base.list">
                                     <div md-ink-ripple layout="row">
                                         <div class="inset">
                                             <i class="material-icons">list</i>
