--- a/EquipmentWeb/app/list/list.template.html
+++ b/EquipmentWeb/app/list/list.template.html
@@ -1,12 +1,23 @@
-<md-content>
-    <md-list>
-        <md-subheader class="md-no-sticky">Currently featured equipment items</md-subheader>
-        <md-list-item class="md-2-line" ng-repeat="item in hc.data" ng-click="null">
-            <div class="md-list-item-text" layout="column">
-                <h3>{{item.name}}</h3>
-                <p>{{item.description}}</p>
-            </div>
-            <md-divider inset></md-divider>
-        </md-list-item>
-    </md-list>
-</md-content>
+<section flex>
+    <md-content>
+        <md-list>
+            <md-subheader class="md-no-sticky">Currently featured equipment items</md-subheader>
+            <md-list-item class="md-2-line" ng-repeat="item in hc.data" ng-click="null">
+                <div class="md-list-item-text" layout="column">
+                    <h3>{{item.name}}</h3>
+                    <p>{{item.description}}</p>
+                </div>
+                <md-divider inset></md-divider>
+            </md-list-item>
+        </md-list>
+    </md-content>
+</section>
+<section layout="row" layout-padding="">
+    <cl-paging flex
+               cl-pages="10"
+               cl-steps="5"
+               cl-page-changed=""
+               cl-align="center center"
+               cl-current-page="1">
+    </cl-paging>
+</section>
